MCR-3285 pmd: UnsynchronizedStaticFormatter (#2344)
use DateTimeFormatter instead of SimpleDateFormat

---------

Co-authored-by: Thomas Scheffler <github@yagee.de>